@@ -1,6 +1,6 @@
 Package: arm
-Version: 1.1-16.01
-Date: 2008-10-19
+Version: 1.1-16.02
+Date: 2008-11-10
 Title: Data Analysis Using Regression and Multilevel/Hierarchical Models
 Author: Andrew Gelman <gelman@stat.columbia.edu>,
         Yu-Sung Su <ys463@columbia.edu>,
